Реализация прототипа Service - DAO

--- a/resume-service/src/main/resources/application.properties
+++ b/resume-service/src/main/resources/application.properties
@@ -2,3 +2,21 @@
 spring.banner.image.location=victor.jpg
 spring.profiles.active=default
 server.port=8085
+## default connection pool
+spring.datasource.hikari.connectionTimeout=20000
+spring.datasource.hikari.maximumPoolSize=5
+## PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/ias_integration
+spring.datasource.username=postgres
+spring.datasource.password=Visual12
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
+spring.jpa.database=postgresql
+spring.jpa.show-sql=true
+#drop n create table again, good for testing, comment this in production
+spring.jpa.hibernate.ddl-auto=create
+#for production
+#spring.jpa.hibernate.ddl-auto=update
+#Logging
+logging.level.org.springframework=ERROR
+logging.level.security.contrparties.investigations=DEBUG
