--- a/resume-data/pom.xml
+++ b/resume-data/pom.xml
@@ -26,6 +26,12 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
 
+        <!-- PostgreSQL -->
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+        </dependency>
+
         <!-- database -->
         <dependency>
             <groupId>com.oracle.ojdbc</groupId>
