Отладка прототипа Service - DAO/ Сохранение в лог и в промеж область soap сообщения

--- a/resume-service/src/main/resources/application.properties
+++ b/resume-service/src/main/resources/application.properties
@@ -18,5 +18,5 @@ spring.jpa.hibernate.ddl-auto=create
 #for production
 #spring.jpa.hibernate.ddl-auto=update
 #Logging
-logging.level.org.springframework=ERROR
+logging.level.org.springframework=DEBUG
 logging.level.security.contrparties.investigations=DEBUG
