--- a/resume-service/src/main/resources/application.properties
+++ b/resume-service/src/main/resources/application.properties
@@ -7,6 +7,8 @@ spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
 ## PostgreSQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/ias_integration
+#spring.datasource.url=jdbc:postgresql://localhost:5432/ias_integration?currentSchema=contragents
+spring.jpa.properties.hibernate.default_schema=contragents
 spring.datasource.username=postgres
 spring.datasource.password=Visual12
 spring.datasource.driver-class-name=org.postgresql.Driver
