--- a/resume-data/pom.xml
+++ b/resume-data/pom.xml
@@ -18,6 +18,7 @@
     </organization>
     <properties>
         <main.basedir>${basedir}/../..</main.basedir>
+        <oracle.jdbc.version>12.2.0.1</oracle.jdbc.version>
     </properties>
 
     <dependencies>
@@ -26,13 +27,37 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
 
+        <!-- database -->
+        <!--dependency>
+        <groupId>com.oracle</groupId>
+       <artifactId>ojdbc7</artifactId>
+       <version>12.1.0.2</version>
+         </dependency-->
+
+        <!--dependency>
+            <groupId>com.oracle.jdbc</groupId>
+            <artifactId>ojdbc8</artifactId>
+            <version>12.2.0.1</version>
+        </dependency-->
+
+        <dependency>
+            <groupId>driver.jdbc.oracle</groupId>
+            <artifactId>ojdbc6</artifactId>
+            <version>${oracle.jdbc.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>driver.jdbc.oracle</groupId>
+            <artifactId>orai18n</artifactId>
+            <version>${oracle.jdbc.version}</version>
+        </dependency>
+
         <!-- PostgreSQL -->
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
         </dependency>
 
-        <!-- database -->
         <dependency>
             <groupId>com.oracle.ojdbc</groupId>
             <artifactId>ojdbc8</artifactId>
