--- a/pom.xml
+++ b/pom.xml
@@ -236,6 +236,14 @@
 	</build>
 	<repositories>
 		<repository>
+			<id>central</id>
+			<url>https://repo.maven.apache.org/maven2/</url>
+		</repository>
+		<repository>
+			<id>Local</id>
+			<url>C:/Users/User/.m2/repository</url>
+		</repository>
+		<repository>
 			<id>spring-snapshots</id>
 			<name>Spring Snapshots</name>
 			<url>https://repo.spring.io/snapshot</url>
@@ -251,10 +259,7 @@
 				<enabled>false</enabled>
 			</snapshots>
 		</repository>
-		<repository>
-			<id>central</id>
-			<url>https://repo.maven.apache.org/maven2/</url>
-		</repository>
+
 	</repositories>
 
 	<pluginRepositories>
