--- a/resume-service/src/main/resources/application.properties
+++ b/resume-service/src/main/resources/application.properties
@@ -6,29 +6,29 @@ spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
 
 ## ----- PostgreSQL ---
-spring.datasource.url=jdbc:postgresql://localhost:5432/ias_integration?currentSchema=contragents
-spring.jpa.properties.hibernate.default_schema=contragents
-spring.datasource.username=postgres
-spring.datasource.password=Visual12
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
-spring.jpa.database=postgresql
-spring.jpa.show-sql=true
-## -----  Oracle ---
-#spring.datasource.url=jdbc:oracle:thin:@10.0.0.20:1521:DW
-#spring.jpa.properties.hibernate.default_schema=SPI_SIBUR_STG
-#spring.datasource.username=SPI_SIBUR_STG
-#spring.datasource.password=visual12
-#spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-#spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
-#spring.jpa.database=oracle
+#spring.datasource.url=jdbc:postgresql://localhost:5432/ias_integration?currentSchema=contragents
+#spring.jpa.properties.hibernate.default_schema=contragents
+#spring.datasource.username=postgres
+#spring.datasource.password=Visual12
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
+#spring.jpa.database=postgresql
 #spring.jpa.show-sql=true
-#------ init DB  ----
-spring.jpa.hibernate.ddl-auto=update
-#--- for production
 
+## -----  Oracle ---
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:DW
+spring.jpa.properties.hibernate.default_schema=SPI_SIBUR_STG
+spring.datasource.username=SPI_SIBUR_STG
+spring.datasource.password=Visual12
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
+spring.jpa.database=oracle
+spring.jpa.show-sql=true
+#------ init DB  ----
 #drop n create table again, good for testing, comment this in production
-#spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create
+#--- for production
+#spring.jpa.hibernate.ddl-auto=update
 # ---- Logging ---
 logging.level.org.springframework=DEBUG
 logging.level.security.contrparties.investigations=DEBUG
